--- a/README
+++ b/README
@@ -23,7 +23,7 @@ Pour installer le module retrait sur place, téléchargez l'archive et décompre
 
 ### Utilisation
 
-Pour utiliser le module de retrait sur place, allez dans le back-office, onglet Modules, et activez le module Paypal,
+Pour utiliser le module de retrait sur place, allez dans le back-office, onglet Modules, et activez le,
 puis cliquez sur "Configurer" sur la ligne du module. Renseignez le prix que vous souhaitez donner au retrait sur place
 et enregistrez.
 
