Fix address shown in order-invoice 	modified:   Config/config.xml 	new file:   Loop/LocalAddress.php 	new file:   Loop/LocalPickupId.php 	modified:   README 	new file:   templates/frontOffice/default/order-invoice.html

--- a/README
+++ b/README
@@ -8,11 +8,12 @@ Summary
 fr_FR:
 1.  Installation
 2.  Utilisation
+3.  Intégration
 
 en_US:
 1.  Install notes
 2.  How to use
-
+3.  Integration
 
 fr_FR
 -----
@@ -27,6 +28,13 @@ Pour utiliser le module de retrait sur place, allez dans le back-office, onglet 
 puis cliquez sur "Configurer" sur la ligne du module. Renseignez le prix que vous souhaitez donner au retrait sur place
 et enregistrez.
 
+### Intégration
+Pour intégrer ce module, seule la page "order-invoice" est à modifier.
+En effet, deux boucles sont disponibles: localpickupid et address.local
+Le but de la modification est de vérifier si le module utilisé pour la livraison est le retrait sur place
+en comparant les ids, et si tel est le cas, utiliser la boucle address.local au lieu de address pour afficher l'address du magasin
+
+
 en_US
 -----
 
@@ -39,3 +47,9 @@ To install the local pickup module, download the archive and uncompress it in <p
 
 To use the module, you first need to activate it in the back-office, tab Modules, and click on "Configure" on the line
 of the module. Enter the price you want for local pickup and save.
+
+### Integration
+This module only requires to edit "order-invoice".
+To do the job, you have two loops: localpickupid and address.local
+The goal is to check if the order's delivery module is local pickup by comparing the ids,
+and if the module is local pickup, use the loop address.local instead of address to show the store's address.
